# arguments

./: .travis.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
src/: arguments.rs  lib.rs  parser.rs
