[package]
name = "arguments"
version = "0.1.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/stainless-steel/arguments"
homepage = "https://github.com/stainless-steel/arguments"
documentation = "https://stainless-steel.github.io/arguments"
description = """
The package provides a parser for command-line arguments.
"""

[dependencies]
options = "*"
