[package]
name = "arguments"
version = "0.7.1"
edition = "2021"
license = "Apache-2.0/MIT"
authors = [
    "Denis Kolodin <deniskolodin@gmail.com>",
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
]
description = "The package provides a parser for command-line arguments."
documentation = "https://docs.rs/arguments"
homepage = "https://github.com/stainless-steel/arguments"
repository = "https://github.com/stainless-steel/arguments"

[dependencies]
options = "0.5"
